La ultima parte que hicimos de la calculadora 08/09/2025

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test_PPTR" >
         <activity
-            android:name=".registro"
+            android:name=".Calculadora"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
